<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".FishMap">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336">

        <Button
            android:id="@+id/btn_mediah"
            android:layout_width="97dp"
            android:layout_height="123dp"
            android:layout_alignTop="@+id/ivWorldMap"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="309dp"
            android:layout_marginTop="134dp"
            android:layout_marginEnd="5dp"
            android:stateListAnimator="@null"
            android:text="@string/mediah_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_serendia"
            android:layout_width="72dp"
            android:layout_height="59dp"
            android:layout_alignTop="@+id/ivWorldMap"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="242dp"
            android:layout_marginTop="189dp"
            android:layout_marginEnd="97dp"
            android:background="#FFFFFF"
            android:stateListAnimator="@null"
            android:text="@string/serendia_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_margoria"
            android:layout_width="149dp"
            android:layout_height="108dp"
            android:layout_alignTop="@+id/ivWorldMap"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="260dp"
            android:stateListAnimator="@null"
            android:text="@string/margoria_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_balenos"
            android:layout_width="91dp"
            android:layout_height="103dp"
            android:layout_alignTop="@+id/ivWorldMap"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="100dp"
            android:stateListAnimator="@null"
            android:text="@string/balenos_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_calpheon"
            android:layout_width="97dp"
            android:layout_height="105dp"
            android:layout_alignTop="@+id/ivWorldMap"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="142dp"
            android:layout_marginTop="187dp"
            android:layout_marginEnd="171dp"
            android:stateListAnimator="@null"
            android:text="@string/calpheon_btn"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/ivWorldMap"
            android:layout_width="wrap_content"
            android:layout_height="345dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:background="#FFFFFF"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/world_map" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_fullmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_check_full_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/click_on_a_region"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>