<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity">


    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="500dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/user"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="center|bottom"
            android:text="@string/profile"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/recipe"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_recipes"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="center|bottom"

            android:text="@string/recipes"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="340dp"

        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/location"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="center|bottom"
            android:text="@string/btn_map"

            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="340dp"

        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/fish"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_fishes"
            android:layout_width="130dp"
            android:layout_height="129dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="center|bottom"
            android:text="@string/btn_fishes"

            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="180dp"

        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/fishing"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_fishing"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:gravity="center|bottom"
            android:text="@string/fishing"

            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>